--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ script:
   - if [[ "$TEST" == node ]]; then ./tool/node_test.sh ; fi
 env:
   - ANALYZER=master
+  - ANALYZER=master DDC_BROWSERS=Firefox
   - ANALYZER=master CXX=g++
   - ANALYZER=master CXX=clang++
   - TEST=coverage
@@ -67,6 +68,7 @@ env:
 matrix:
   allow_failures:
     - env: TEST=node
+    - env: ANALYZER=master DDC_BROWSERS=Firefox
     - env: ANALYZER=master CXX=clang++
 notifications:
   email:
